fix alignment

--- a/iteration2/game1/css/style.css
+++ b/iteration2/game1/css/style.css
@@ -23,6 +23,8 @@ html {
 li div {
     display: table-cell;
     vertical-align: middle;
+    justify-content: center;
+    align-items: center;
 }
 
 ul {
